--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pylint = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 pylint-django = "*"
+markdown = "*"
+markdownify = "*"
 
 [dev-packages]
 
